tests/snapshots/pre_authorized_flow__reduce_claims.snap
---
source: tests/pre_authorized_flow.rs
assertion_line: 432
expression: vc
---
"@context":
  - "https://www.w3.org/2018/credentials/v1"
  - "http://credibil.io/credentials/v1"
id: "http://credibil.io/credentials/EmployeeIDCredential"
type:
  - VerifiableCredential
  - EmployeeIDCredential
name:
  "@value": Employee ID
  "@language": en-NZ
description:
  "@value": Credibil employee ID credential
  "@language": en-NZ
issuer: "http://credibil.io"
credentialSubject:
  family_name: Person
  given_name: Normal
  id: "[id]"
validFrom: "[validFrom]"
